test: Add test cases for FindPersonCommand, FindPersonCommandParser, and ALlergy